--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/iconAplication.png" />
+    <link rel="icon" href="%PUBLIC_URL%/iconAplication.PNG" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <meta property="og:image" content="%PUBLIC_URL%/fbApplication.png">
+    <meta property="og:image" content="%PUBLIC_URL%/fbApplication.PNG">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Lista zadań</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
